Disabled karate integration tests due to not being able to run maven build with an embedded server, and no equivalent of Spring's @Profile exists in Jakarta-EE? Will discuss this more in-depth.

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             <testResource>
                 <directory>src/test/java</directory>
                 <excludes>
-                    <exclude>/com/somecompany/textprocessing/karate/**</exclude>
+                    <exclude>/com/somecompany/textprocessing/karate/**/*.java</exclude>
                 </excludes>
             </testResource>
         </testResources>
